# fastapi-docus

./: Dockerfile  alembic.ini  auth.txt  commands.txt  docs.txt  main.py  prompt.txt  pyproject.toml  topics.txt
alembic/: env.py
alembic/versions/: 15bfbb791d76_description_update.py  c85a537f3599_description.py  dbcad0cd4cb8_initial.py
app/models/: model.py
app/routes/: todo.py  user.py
app/schemas/: schemas.py
app/utils/: auth.py  database.py
auth-fastapi/: main.py  pyproject.toml
